<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
   	android:gravity="center"
   	android:background="@null">
   	<TextView
   	    android:id="@+id/list_content"
        android:layout_width="fill_parent"  
	    android:layout_height="wrap_content"
	    android:background="@null"
	    android:gravity="center"
	    android:textSize="25dp"/>
   	<TextView
        android:layout_width="fill_parent"  
	    android:layout_height="10dp"
	    android:background="@null"/>
   <Button 
	    android:id="@+id/btn_edit"  
	    android:layout_width="fill_parent"  
	    android:layout_height="50dp"
	    android:text="@string/edit"
	    android:textSize="20dp"
	    android:background="@drawable/selector_btn"/>
   	<TextView
        android:layout_width="fill_parent"  
	    android:layout_height="10dp"
	    android:background="@null"/>
   <Button 
	    android:id="@+id/btn_delete"  
	    android:layout_width="fill_parent"  
	    android:layout_height="50dp"
	    android:text="@string/delete"
	    android:textSize="20dp"
	    android:background="@drawable/selector_btn"/>
   <TextView
        android:layout_width="fill_parent"  
	    android:layout_height="10dp"
	    android:background="@null"/>
   <Button 
	    android:id="@+id/btn_share"  
	    android:layout_width="fill_parent"  
	    android:layout_height="50dp"
	    android:text="@string/share"
	    android:textSize="20dp"
	    android:background="@drawable/selector_btn"/>
   <TextView
        android:layout_width="fill_parent"  
	    android:layout_height="10dp"
	    android:background="@null"/>
   <Button 
	    android:id="@+id/btn_cancel"  
	    android:layout_width="fill_parent"  
	    android:layout_height="50dp"
	    android:text="@string/cancel"
	    android:textSize="20dp"
	    android:background="@drawable/selector_btn"/>
</LinearLayout>