<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@color/custom_background">
    <!-- xmlns:android="http://schemas.android.com/apk/res/android" --> 
    <LinearLayout 
        android:id="@+id/LayoutSetup" 
        android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <RelativeLayout 
			android:id="@+id/TableRowIcon" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:gravity="center">
			<TextView 
					android:id="@+id/login_Icon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerHorizontal="true"
					android:text="@string/app_name"
					android:textAppearance="@style/title"
					android:layout_above="@+id/TableRow02"/>
		</RelativeLayout>
        <RelativeLayout 
              android:id="@+id/TableRow02" 
              android:layout_height="wrap_content" 
              android:layout_width="fill_parent"
              android:layout_marginTop="30dp"
              android:gravity="center">
              <EditText android:id="@+id/mEdtAccountName" 
	                android:background="@drawable/login_img_input"
	                android:singleLine="true"
	                android:maxLength="15"
	                android:layout_height="55dp"
	                android:layout_width="fill_parent"
	                android:layout_marginLeft="20dip"
	                android:layout_marginRight="20dip"
	                android:gravity="center"
	                android:paddingLeft="10dip" 
	                android:paddingRight="10dip"
	                android:hint="@string/login_account"
	                android:textColorHint="#808080"
	                android:textSize="6pt"/>
			 <ImageView 
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_centerVertical="true"
					android:layout_marginLeft="30dp"
					android:src="@drawable/icn_user"/>          
		</RelativeLayout>
		<RelativeLayout 
	         android:id="@+id/TableRow03" 
	         android:layout_height="wrap_content" 
	         android:layout_width="fill_parent"
	         android:layout_marginTop="5dp"
	         android:gravity="center">
			 <EditText android:id="@+id/mEdtPassWord" 
	                android:background="@drawable/login_img_input"
	                android:singleLine="true"
	                android:maxLength="15"
	                android:layout_height="55dp"
	                android:layout_width="fill_parent"
	                android:layout_marginLeft="20dip"
	                android:layout_marginRight="20dip"
	                android:gravity="center"
	                android:paddingLeft="10dip" 
	                android:paddingRight="10dip"
	                android:hint="@string/login_password"
	                android:textColorHint="#808080"
	                android:textSize="6pt"
	                android:inputType="textPassword"/>
			 <ImageView 
					android:layout_width="45dp"
					android:layout_height="45dp"
					android:layout_centerVertical="true"
					android:layout_marginLeft="25dp"
					android:src="@drawable/icn_password"/>
	  </RelativeLayout>
	  <RelativeLayout 
	         android:id="@+id/TableRow04" 
	         android:layout_height="wrap_content" 
	         android:layout_width="fill_parent"
	         android:layout_marginTop="5dp"
	         android:gravity="center"
	         android:visibility="gone">
			 <EditText android:id="@+id/mEdtPassWordCon" 
	                android:background="@drawable/login_img_input"
	                android:singleLine="true"
	                android:maxLength="15"
	                android:layout_height="55dp"
	                android:layout_width="fill_parent"
	                android:layout_marginLeft="20dip"
	                android:layout_marginRight="20dip"
	                android:gravity="center"
	                android:paddingLeft="10dip" 
	                android:paddingRight="10dip"
	                android:hint="@string/login_password_confirmed"
	                android:textColorHint="#808080"
	                android:textSize="6pt"
	                android:inputType="textPassword"/>
			 <ImageView 
					android:layout_width="45dp"
					android:layout_height="45dp"
					android:layout_centerVertical="true"
					android:layout_marginLeft="25dp"
					android:src="@drawable/icn_password"/>
	  </RelativeLayout>
	  <RelativeLayout 
              android:id="@+id/TableRow05" 
              android:layout_height="wrap_content" 
              android:layout_width="fill_parent"
              android:layout_marginTop="5dp"
              android:gravity="center"
              android:visibility="gone">
              <EditText android:id="@+id/mEdtUserName" 
	                android:background="@drawable/login_img_input"
	                android:singleLine="true"
	                android:maxLength="15"
	                android:layout_height="55dp"
	                android:layout_width="fill_parent"
	                android:layout_marginLeft="20dip"
	                android:layout_marginRight="20dip"
	                android:gravity="center"
	                android:paddingLeft="10dip" 
	                android:paddingRight="10dip"
	                android:hint="@string/new_nickname"
	                android:textColorHint="#808080"
	                android:textSize="6pt"/>
			 <ImageView 
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_centerVertical="true"
					android:layout_marginLeft="30dp"
					android:src="@drawable/icn_user"/>          
		</RelativeLayout>
	  <RelativeLayout 
			android:layout_width="fill_parent"
			android:layout_height="60dp"
			android:layout_gravity="center">
			<TextView 
					android:id="@+id/mTxtMessage" 
					android:layout_width="wrap_content"
					android:layout_height="30dp" 
					android:layout_centerInParent="true"
					android:textStyle="bold"
					android:textSize="8pt"
					android:textColor="#E5603B"
					android:text=""/>
		</RelativeLayout >
		<LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_gravity="center"
	        android:orientation="horizontal"
	        android:layout_below="@+id/mTxtMessage">
	        <Button 
	            android:id = "@+id/saveButton"
	            android:layout_height ="wrap_content"
	            android:layout_width = "100dp"
	            android:onClick="ClickHandler"
	            android:text="@string/btn_login"
	            android:textAppearance="@style/button_text"/>
	        <TextView 
	            android:id = "@+id/empty"
	            android:layout_height ="wrap_content"
	            android:layout_width = "30dp"
	            android:background="#00000000"/>
	        <Button 
	            android:id = "@+id/NewButton"
	            android:layout_height ="wrap_content"
	            android:layout_width = "100dp"
	            android:onClick="ClickHandler"
	            android:text="@string/btn_register"
	            android:textAppearance="@style/button_text"/>
    	</LinearLayout >
	</LinearLayout>
    
</RelativeLayout>