<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/custom_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/contact2_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@color/tab_bg">
        <TextView
            android:id="@+id/title_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 							
			android:layout_centerInParent="true"
			android:text="@string/calendar_list"
			android:textColor="#559999"
			android:textSize="30dp"/>
        <ImageButton 
	        android:id="@+id/btn_add_contact"
	        android:layout_width="50dp"
	        android:layout_height="50dp"            
	        android:background="@drawable/icn_addevent"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        android:layout_centerVertical="true"/>
    </RelativeLayout>
	
     <ListView 
        android:id="@+id/mylistview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/contact2_title"
    	android:layout_above="@+id/tab_btn"          
        android:padding="5dp"
        android:cacheColorHint="#00000000"
        android:listSelector="#00000000"
        android:divider="@drawable/contact_separateline"/>
    
   	<LinearLayout
       	android:id="@+id/tab_btn"
      	android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="50dp"
		android:layout_alignParentBottom="true">
        <LinearLayout
      		android:orientation="vertical"
      		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:background="@color/tab_bg"
			android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:gravity="center">
	        <RelativeLayout
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content">
		        <ImageButton
		            android:id="@+id/Summary"
		            android:layout_width="40dp"
	            	android:layout_height="40dp"
		            android:background="@drawable/selector_btn_home"/>
	        </RelativeLayout>
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tab_calendar"
	            android:textColor="#3D5066"
	            android:textSize="5pt"
	            android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
      		android:orientation="vertical"
      		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@color/tab_bg"
            android:gravity="center">
	        <ImageButton
	            android:id="@+id/Calendar"
	            android:layout_width="40dp"
	            android:layout_height="40dp"
	            android:textSize="6pt"
	            android:background="@drawable/btn_calendar_press"/>
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tab_contact_list"
	            android:textColor="#3D5066"
	            android:textSize="5pt"
	            android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
      		android:orientation="vertical"
      		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:background="@color/tab_bg"
			android:layout_marginLeft="1dp"
			android:gravity="center">
	        <ImageButton
	            android:id="@+id/Phonebook"
	            android:layout_width="40dp"
	            android:layout_height="40dp"
	            android:background="@drawable/selector_btn_profile"/>
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tab_calendar_list"
	            android:textColor="#3D5066"
	            android:textSize="5pt"
	            android:visibility="gone"/>
        </LinearLayout>
       </LinearLayout>
    
</RelativeLayout>