<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/reminder_pop_card_ll"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_h"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="fill_parent" 
		    android:layout_height="50dp"
            android:text="New Event"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="#000000"/>
        <RelativeLayout 
            android:layout_width="230dp" 
		    android:layout_height="50dp">
	        <EditText
			    android:id="@+id/edtTime"
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent"
			    android:background="@drawable/login_img_input"
			    android:hint="@string/TimePicker"
			    android:gravity="center"/>
	        <ImageButton
			    android:id="@+id/timePickerButton"
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent"
			    android:background="@null"/>
        </RelativeLayout>
        <EditText 
            android:id="@+id/edtContent" 
            android:background="@drawable/login_img_input"
            android:layout_width="230dp" 
		    android:layout_height="150dp"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:paddingTop="20dp"
		    android:paddingBottom="20dp"
            android:textColorHint="#808080"
            android:textSize="9pt"
            android:gravity="start"/>
        <RelativeLayout 
            android:layout_width="fill_parent" 
		    android:layout_height="35dp"
		    android:layout_marginTop="10dp">
	        <ImageButton 
	        	android:id="@+id/btn_alarm_on"  
		        android:layout_width="80dp"  
		        android:layout_height="fill_parent"
		        android:background="@drawable/btn_setting_on"
		        android:layout_marginRight="30dp"
		        android:layout_alignParentRight="true"
		        android:visibility="invisible"/>
	        <ImageButton 
		        android:id="@+id/btn_alarm_off"  
		        android:layout_width="80dp"  
		        android:layout_height="fill_parent"
		        android:background="@drawable/btn_setting_off"
		        android:layout_marginRight="30dp"
		        android:layout_alignParentRight="true"/>
	        <TextView
		        android:layout_width="fill_parent"  
		        android:layout_height="fill_parent"
		        android:background="@null"
		        android:text="Alarm"
            	android:textColor="#000000"
            	android:textSize="9pt"
            	android:gravity="center"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/btn_keyid"
            android:layout_width="fill_parent"
		    android:layout_height="10dp"
            android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
            <Button 
		        android:id="@+id/btn_save"  
		        android:layout_width="100dp"  
		        android:layout_height="40dp"
		        android:background="@drawable/selector_btn"
		        android:text="@string/save"/>
            <Button 
		        android:id="@+id/btn_cancel"  
		        android:layout_width="100dp"  
		        android:layout_height="40dp"
		        android:background="@drawable/selector_btn"
		        android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>